added example of env file
VK Client Id/Client Secret can be obtained by making an app on site dev.vk.com

Redirect URL is the site that VK redirects to, after performing Oauth authentication

--- a/templates/cut_edit.html
+++ b/templates/cut_edit.html
@@ -16,16 +16,24 @@
             const video_time_error=document.getElementById('time_error');
             const video_duration= document.getElementById('Video')
             const form= document.getElementById("video_form")
-
             button.addEventListener('click', function() {
                 console.log("Button clicked");
                 dropdown.classList.toggle('opacity-0');
                 overlay.classList.toggle('hidden');
+                if (overlay.classList.contains('hidden')) {
+                    overlay.style.pointerEvents = 'none';
+                    dropdown.style.pointerEvents = 'none';
+                } else {
+                    overlay.style.pointerEvents = 'auto';
+                    dropdown.style.pointerEvents = 'auto';
+                }
             });
             overlay.addEventListener('click', function() {
                 console.log("Overlay clicked");
                 dropdown.classList.add('opacity-0');
                 overlay.classList.add('hidden');
+                overlay.style.pointerEvents = 'none';
+                dropdown.style.pointerEvents = 'none';
             });
 
             start_time.addEventListener('change', function () {
@@ -40,7 +48,6 @@
                     var videoDurationSeconds = video_duration.duration;
 
                     if (startSeconds > videoDurationSeconds) {
-                        // Show error if end time exceeds video duration or start time exceeds video duration
                         video_time_error.classList.remove('hidden');
                         video_time_error.textContent = "Время не может превышать продолжительность видео";
                     } else {
