--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,57 +16,53 @@
                 console.log("Button clicked");
                 dropdown.classList.toggle('opacity-0');
                 overlay.classList.toggle('hidden');
+                if (overlay.classList.contains('hidden')) {
+                    overlay.style.pointerEvents = 'none';
+                    dropdown.style.pointerEvents = 'none';
+                } else {
+                    overlay.style.pointerEvents = 'auto';
+                    dropdown.style.pointerEvents = 'auto';
+                }
             });
             overlay.addEventListener('click', function() {
                 console.log("Overlay clicked");
                 dropdown.classList.add('opacity-0');
                 overlay.classList.add('hidden');
+                overlay.style.pointerEvents = 'none';
+                dropdown.style.pointerEvents = 'none';
             });
 
         });
     </script>
-
-
-
 </head>
 <body >
 <div class="h-screen w-screen bg-gray-900 bg-cover bg-no-repeat" style="background-image: url('../static/images/background.png');">
     <nav class="absolute container mx-auto p-2 bg-gray-800 bg-opacity-40 rounded-3xl shadow-2xl left-0 right-0">
         <div class="flex justify-between items-center flex-wrap">
-
             <div class="flex-1 min-w-0">
                 <a href="/dashboard">
                     <img class="p-2 size-14" src="../static/assets/VK.svg">
                 </a>
             </div>
-
             <div class="flex-1 min-w-0 text-center lg:hidden">
                 <p class="text-white text-xl text-extrabold VK-Sans">
                     Video Conversion Service
                 </p>
             </div>
-
             <div class="flex-grow lg:flex space-x-14 justify-center hidden">
                 <a href="/convert" class=" mt-1 mb-1  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 VK-Sans text-white bg-gray-800 bg-opacity-20  border border-gray-200 rounded-full text-md px-10 py-2 text-center inline-flex items-center">
                     Convert
                 </a>
-
                 <a href="/cut" class=" mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
                     Cut
                 </a>
-
-
                 <a href="/watermark" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center inline-flex items-center">
                     Watermark
                 </a>
-
-
                 <a href="/screenshot" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
                     Screenshot
                 </a>
-
             </div>
-
             <div class="flex-1 min-w-0 text-right">
                 <div class="group p-2 inline-block">
                     <button class="block h-11 w-11 z-10 rounded-full overflow-hidden border-2 border-gray-200 focus:border-white">
@@ -83,15 +79,9 @@
                         <a href="/profile" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-pink-500 hover:to-blue-600 lg:rounded-t-3xl shadow-2xl">Profile</a>
                         <a href="/signout" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 rounded-b-3xl shadow-2xl">Sign Out</a>
                     </div>
-
-
-
                 </div>
             </div>
-
         </div>
-
-
     </nav>
 
     <div class="hidden lg:flex h-full w-full justify-center items-center">
@@ -131,7 +121,7 @@
                     </div>
 
                     <div class="flex flex-row space-x-14 items-center justify-center">
-                        <p class="text-center text-xl text-white VK-Sans">Выйти </p>
+                        <p class="text-center text-xl text-white VK-Sans">Выйти из аккаунта </p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
                             <path d="M77 1L93 16L77 31" stroke="white"/>
                             <path d="M93 16L0 16" stroke="white"/>
@@ -150,7 +140,7 @@
                     </a>
 
 
-                    <a href="/profile/delete" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:bg-red-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center  items-center">
+                    <a href="/deleteConf" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:bg-red-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center  items-center">
                         Delete Account
                     </a>
 
@@ -183,7 +173,7 @@
                     File History
                 </a>
 
-                <a href="/profile/delete" class="bg-gradient-to-r hover:bg-red-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
+                <a href="/deleteConf" class="bg-gradient-to-r hover:bg-red-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
                     Delete Account
                 </a>
 
