--- a/templates/screenshot.html
+++ b/templates/screenshot.html
@@ -16,13 +16,21 @@
                 console.log("Button clicked");
                 dropdown.classList.toggle('opacity-0');
                 overlay.classList.toggle('hidden');
+                if (overlay.classList.contains('hidden')) {
+                    overlay.style.pointerEvents = 'none';
+                    dropdown.style.pointerEvents = 'none';
+                } else {
+                    overlay.style.pointerEvents = 'auto';
+                    dropdown.style.pointerEvents = 'auto';
+                }
             });
             overlay.addEventListener('click', function() {
                 console.log("Overlay clicked");
                 dropdown.classList.add('opacity-0');
                 overlay.classList.add('hidden');
+                overlay.style.pointerEvents = 'none';
+                dropdown.style.pointerEvents = 'none';
             });
-
             const fileInput = document.getElementById('dropzone-file');
             const errorMessage = document.getElementById('error-message');
 
