--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,11 +16,20 @@
                 console.log("Button clicked");
                 dropdown.classList.toggle('opacity-0');
                 overlay.classList.toggle('hidden');
+                if (overlay.classList.contains('hidden')) {
+                    overlay.style.pointerEvents = 'none';
+                    dropdown.style.pointerEvents = 'none';
+                } else {
+                    overlay.style.pointerEvents = 'auto';
+                    dropdown.style.pointerEvents = 'auto';
+                }
             });
             overlay.addEventListener('click', function() {
                 console.log("Overlay clicked");
                 dropdown.classList.add('opacity-0');
                 overlay.classList.add('hidden');
+                overlay.style.pointerEvents = 'none';
+                dropdown.style.pointerEvents = 'none';
             });
 
         });
@@ -94,7 +103,9 @@
     <div class="flex justify-center items-center h-full w-full">
         <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4  sm:px-8 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
             <div class="text-white VK-Sans">
+
                 <div class=" mt-auto mb-4 sm:mb-8 flex flex-col items-center ">
+
                     <img src="../static/assets/video-player.png" class="rounded-lg w-24 sm:w-34 md:w-64" alt="" />
                     <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl text-center py-4 sm:py-6 md:py-9 VK-Sans"></h1>
 
