--- a/templates/email.html
+++ b/templates/email.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Email</title>
     <link href="../static/css/output.css" rel="stylesheet">
     <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
     <script>
@@ -11,6 +11,7 @@
             const button = document.querySelector('.group button');
             const dropdown = document.getElementById('dropdown');
             const overlay = document.getElementById('overlay');
+            const userEMail= document.getElementById('email')
 
             button.addEventListener('click', function() {
                 console.log("Button clicked");
@@ -31,6 +32,7 @@
                 overlay.style.pointerEvents = 'none';
                 dropdown.style.pointerEvents = 'none';
             });
+
 
         });
     </script>
@@ -85,70 +87,65 @@
     </nav>
 
     <div class="hidden lg:flex h-full w-full justify-center items-center">
-        <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-10 py-10 sm:px-10 sm:mb-8 sm:py-14 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
+        <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-10 py-10 sm:px-10 sm:mb-8 sm:py-10 md:px-11 md:py-11 shadow-2xl backdrop-blur-md">
 
-            <div class="absolute -left-6 -top-10 md:-left-12 md:-top-14 size-28 md:w-36 md:h-36">
-                <div class="bg-cover bg-center w-full h-full rounded-full" style="background-image: url({{.userpicture}});"></div>
+            <div class="absolute -left-4 -top-10 md:-left-12 md:-top-20 size-16 md:w-36 md:h-36">
+
+                <a href="/profile">
+                    <img class="size-44 md:size-32 " src="../static/assets/persik2.webp">
+                </a>
+
             </div>
             <div class="relative left-26 top-0 mb-8">
-                <h1 class="VK-Sans text-center mt-8 text-sm text-white text-xl md:text-3xl mb-8">Добро пожаловать <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text VK-Sans text-transparent">{{.userName}}!</span></h1>
+                <h1 class="VK-Sans text-center mt-8 text-sm text-white text-xl  md:text-3xl mb-8">Email</h1>
+                <h2 class="VK-Sans text-center mt-8 text-sm text-white  md:text-sm mb-8">Ваш текущий Email {{.userEMail}}</h2>
+
+
+
             </div>
 
             <div class="flex flex-row py-8 items-center justify-center">
-                <div class="flex flex-col space-y-14">
+
                     <div class="flex flex-row space-x-14 items-center justify-center">
-                        <p class="text-center text-xl text-white VK-Sans">Добавь E-Mail</p>
+                        <p class="text-center text-xl text-white VK-Sans">Добавь новый E-Mail</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
                             <path d="M77 1L93 16L77 31" stroke="white"/>
                             <path d="M93 16L0 16" stroke="white"/>
                         </svg>
                     </div>
 
-                    <div class="flex flex-row  items-center justify-center">
-                        <p class="text-center text-xl text-white VK-Sans mr-4">История Использования</p>
-                        <svg class="mr-4" xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
-                            <path d="M77 1L93 16L77 31" stroke="white"/>
-                            <path d="M93 16L0 16" stroke="white"/>
-                        </svg>
-                    </div>
+                    <form action="/profile/email" method="post" class="flex flex-col items-center justify-center mt-16 px-14 space-y-6">
 
-                    <div class="flex flex-row space-x-14 items-center justify-center">
-                        <p class="text-center text-xl text-white VK-Sans">Удалить Аккаунт</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
-                            <path d="M77 1L93 16L77 31" stroke="white"/>
-                            <path d="M93 16L0 16" stroke="white"/>
-                        </svg>
-                    </div>
+                        <input type="email" class="  rounded-3xl bg-gray-800 bg-opacity-40 border border-gray-300 text-white text-center  px-16 py-2 " placeholder="user@vk.com"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" required>
 
-                    <div class="flex flex-row space-x-14 items-center justify-center">
-                        <p class="text-center text-xl text-white VK-Sans">Выйти из аккаунта </p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
-                            <path d="M77 1L93 16L77 31" stroke="white"/>
-                            <path d="M93 16L0 16" stroke="white"/>
-                        </svg>
-                    </div>
 
+                        <button type="submit" class="mt-10  py-2 px-10 text-white rounded-3xl text-center bg-gray-800 bg-opacity-40 border border-gray-200 hover:bg-blue-700">Submit</button>
+
+                    </form>
+
+
+                <div class="absolute  top-2 md:-right-20 md:top-2 size-16 md:w-36 md:h-36">
+
+                    <a href="/profile">
+
+                            <svg width="50px" height="50px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg">
+                                <g fill="none" fill-rule="evenodd" stroke="#aaaaaa" stroke-linecap="round" stroke-linejoin="round" transform="translate(2 2)">
+                                    <circle cx="8.5" cy="8.5" r="8"/>
+                                    <g transform="matrix(0 1 -1 0 17 0)">
+                                        <path d="m5.5 11.5 6-6"/>
+                                        <path d="m5.5 5.5 6 6"/>
+                                    </g>
+                                </g>
+                            </svg>
+
+                    </a>
 
                 </div>
 
-                <div class="flex flex-col ml-8 space-y-10">
-                    <a href="/profile/email" class=" mt-1 mb-1  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 VK-Sans text-white bg-gray-800 bg-opacity-20  border border-gray-200 rounded-full text-md px-10 py-2 text-center  items-center">Email
-                    </a>
-
-                    <a href="/profile/files" class=" mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center items-center">
-                        File History
-                    </a>
 
 
-                    <a href="/deleteConf" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:bg-red-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center  items-center">
-                        Delete Account
-                    </a>
 
 
-                    <a href="/signout" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:bg-red-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center items-center">
-                        Signout
-                    </a>
-                </div>
             </div>
         </div>
     </div>
@@ -160,28 +157,30 @@
         <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-8 sm:px-10 sm:py-10 md:px-16 md:py-16 shadow-2xl backdrop-blur-md">
 
             <div class="relative">
-                <div class="bg-cover bg-center w-36 h-36 md:w-48 md:h-48 rounded-full mx-auto mb-4" style="background-image: url({{.userpicture}});"></div>
-                <h1 class="text-center mt-4 text-sm text-white text-xl md:text-3xl mb-4">Добро пожаловать <span class="font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">{{.userName}}!</span></h1>
+                <a href="/profile">
+                    <div class="bg-cover bg-center w-36 h-36 md:w-48 md:h-48 rounded-full mx-auto mb-4" style="background-image: url({{.userpicture}});"></div>
+
+                </a>
+                <h1 class="text-center mt-4 text-sm text-white text-xl md:text-3xl mb-4">Добавь Новый Email</h1>
+                <h1 class="VK-Sans text-center mt-8 text-sm text-white  md:text-sm mb-8">Нажми на фото, чтобы вернуться назад</h1>
+                <h2 class="VK-Sans text-center mt-8 text-sm text-white  md:text-sm mb-8">Ваш текущий Email {{.userEMail}}</h2>
+
             </div>
 
-            <div class="flex flex-col space-y-4">
-                <a href="/profile/email" class="bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
-                    Email
-                </a>
 
-                <a href="/profile/files" class="bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
-                    File History
-                </a>
 
-                <a href="/deleteConf" class="bg-gradient-to-r hover:bg-red-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
-                    Delete Account
-                </a>
 
-                <a href="/signout" class="bg-gradient-to-r hover:bg-red-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
-                    Signout
-                </a>
-            </div>
+            <form action="/profile/email" method="post" class="flex flex-col items-center justify-center px-10">
+                <div class=" mt-4">
+                    <input type="email" class="  rounded-3xl bg-gray-800 bg-opacity-40 border border-gray-300 text-white text-center  px-16 py-2 " placeholder="user@vk.com"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" required>
+                </div>
+
+                <button type="submit" class="relative mt-4  py-2 px-10 text-white rounded-3xl text-center bg-gray-800 bg-opacity-40 border border-gray-200 hover:bg-blue-700">Далше</button>
+            </form>
+
+
         </div>
+
 
     </div>
 
