added the email verification step

--- a/templates/email.html
+++ b/templates/email.html
@@ -114,9 +114,9 @@
                         </svg>
                     </div>
 
-                    <form action="/profile/email" method="post" class="flex flex-col items-center justify-center mt-16 px-14 space-y-6">
+                    <form action="/verify_mail" method="post" class="flex flex-col items-center justify-center mt-16 px-14 space-y-6">
 
-                        <input type="email" class="  rounded-3xl bg-gray-800 bg-opacity-40 border border-gray-300 text-white text-center  px-16 py-2 " placeholder="user@vk.com"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" required>
+                        <input type="email" name="email" class="  rounded-3xl bg-gray-800 bg-opacity-40 border border-gray-300 text-white text-center  px-16 py-2 " placeholder="user@vk.com"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" required>
 
 
                         <button type="submit" class="mt-10  py-2 px-10 text-white rounded-3xl text-center bg-gray-800 bg-opacity-40 border border-gray-200 hover:bg-blue-700">Submit</button>
@@ -170,9 +170,9 @@
 
 
 
-            <form action="/profile/email" method="post" class="flex flex-col items-center justify-center px-10">
+            <form action="/verify_mail" method="post" class="flex flex-col items-center justify-center px-10">
                 <div class=" mt-4">
-                    <input type="email" class="  rounded-3xl bg-gray-800 bg-opacity-40 border border-gray-300 text-white text-center  px-16 py-2 " placeholder="user@vk.com"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" required>
+                    <input type="email" name="email" class="  rounded-3xl bg-gray-800 bg-opacity-40 border border-gray-300 text-white text-center  px-16 py-2 " placeholder="user@vk.com"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" required>
                 </div>
 
                 <button type="submit" class="relative mt-4  py-2 px-10 text-white rounded-3xl text-center bg-gray-800 bg-opacity-40 border border-gray-200 hover:bg-blue-700">Далше</button>
