--- a/internal/email/templates/325058458_w.html
+++ b/internal/email/templates/325058458_w.html
@@ -43,7 +43,7 @@ width: 100% !important
                 
                 <tbody><tr>
                   <td class="content-cell" style="color:#74787E;font-size:15px;line-height:18px;padding:35px">
-                    <h1 style="margin-top:0;color:#2F3133;font-size:19px;font-weight:bold">Привет Ритупарн,</h1>
+                    <h1 style="margin-top:0;color:#2F3133;font-size:19px;font-weight:bold">Привет ,</h1>
                     
                         
                           
@@ -75,7 +75,7 @@ width: 100% !important
                                 <div style="margin: 30px auto;v-text-anchor:middle;text-align:center">
                                   <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" 
                                     xmlns:w="urn:schemas-microsoft-com:office:word" 
-                                    href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=4a51076c-5933-4892-9a18-da41483d0323&amp;userId=625608093" 
+                                    href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=e088c434-ea14-4c7e-bd2b-844c052dae42&amp;userId=325058458" 
                                     style="height:45px;v-text-anchor:middle;width:263px;background-color:#0077FF;"
                                     arcsize="10%" 
                                     strokecolor="#0077FF" fillcolor="#0077FF"
@@ -95,7 +95,7 @@ width: 100% !important
                                   <td align="center" style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
                                     <div>
                                       
-                                        <a href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=4a51076c-5933-4892-9a18-da41483d0323&amp;userId=625608093" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:263px" target="_blank" width="263">
+                                        <a href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=e088c434-ea14-4c7e-bd2b-844c052dae42&amp;userId=325058458" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:263px" target="_blank" width="263">
                                           Добавить почту
                                         </a>
                                       
@@ -133,7 +133,7 @@ width: 100% !important
                                 <tr>
                                   <td style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
                                     <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px">Если у вас возникли проблемы с кнопкой &#39;Добавить почту&#39;, скопируйте и вставьте приведенный ниже URL-адрес в свой веб-браузер.</p>
-                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=4a51076c-5933-4892-9a18-da41483d0323&amp;userId=625608093" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=4a51076c-5933-4892-9a18-da41483d0323&amp;userId=625608093</a></p>
+                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=e088c434-ea14-4c7e-bd2b-844c052dae42&amp;userId=325058458" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=e088c434-ea14-4c7e-bd2b-844c052dae42&amp;userId=325058458</a></p>
                                   </td>
                                 </tr>
                                 
