--- a/templates/verification_mail.html
+++ b/templates/verification_mail.html
@@ -34,6 +34,24 @@
 
 
             </div>
+
+            <div class="absolute  top-2 sm:left-0 md:-right-20 md:top-2 sm:size-11 md:w-36 md:h-36">
+
+                <a href="/profile">
+
+                    <svg width="40px" height="40px" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg">
+                        <g fill="none" fill-rule="evenodd" stroke="#aaaaaa" stroke-linecap="round" stroke-linejoin="round" transform="translate(2 2)">
+                            <circle cx="8.5" cy="8.5" r="8"/>
+                            <g transform="matrix(0 1 -1 0 17 0)">
+                                <path d="m5.5 11.5 6-6"/>
+                                <path d="m5.5 5.5 6 6"/>
+                            </g>
+                        </g>
+                    </svg>
+
+                </a>
+
+            </div>
         </div>
     </div>
 </div>
